<resources>
    <string name="app_name">UAS 180030029 1</string>
    <string name="dataBuku">DATA BUKU</string>
    <string name="judul">Judul Buku</string>
    <string name="tanggal">Tanggal Terbit</string>
    <string name="penulis">Penulis</string>
    <string name="penerbit">Penerbit</string>
    <string name="gambar">Gambar Buku</string>
    <string name="id_buku">ID Buku</string>
    <string name="sinopsis">Sinopsis Buku</string>
    <string name="harga">Harga Buku</string>
    <string name="jumHalaman">Jumlah Halaman</string>
    <string name="tambah">Tambah Buku</string>
    <string name="edit">Edit Buku</string>
    <string name="hapus">Hapus Buku</string>
    <string name="titik_dua">:</string>
    <string name="simpan">Simpan</string>
    <string name="pilih_tgl">Pilih</string>
    <string name="rp">Rp.</string>
    
    

    
    
    
    
    
    
    
</resources>
