<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/medium_margin"
    tools:context=".TampilActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/judul"
            android:textColor="@android:color/black"
            android:textSize="@dimen/large_text"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_buku"
            android:layout_width="194dp"
            android:layout_height="256dp"
            android:layout_marginStart="105dp"
            android:layout_marginTop="@dimen/medium_margin"
            android:baselineAlignBottom="false"
            android:contentDescription="@string/gambar"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/tv0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penulis"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_penulis"
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:text="@string/penulis"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/tv4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penerbit"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_penerbit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:text="@string/penerbit"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/tv5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tahun"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_tahun"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:text="@string/tahun"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/tv6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/jumHalaman"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_jumlahHalaman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:text="@string/jumHalaman"
                    android:textColor="@android:color/black" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/small_margin">

                <TextView
                    android:id="@+id/tv7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/harga"
                    android:textColor="@android:color/black" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:text="@string/titik_dua"
                    android:textColor="@android:color/black" />

                <TextView
                    android:id="@+id/tv_harga"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/medium_margin"
                    android:layout_weight="1"
                    android:text="@string/harga"
                    android:textColor="@android:color/black" />
            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:text="@string/sinopsis"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/large_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/large_margin"
            android:layout_marginBottom="@dimen/large_margin"
            android:text="@string/sinopsis"
            android:textAlignment="center" />

    </LinearLayout>
</ScrollView>